[package]
name = "db"
version = "0.1.0"
authors = ["stuart"]

[dependencies]
futures = "0.1"
futures-cpupool = "0.1"
tokio-core = "0.1"
tokio-service = "0.1"
tokio-proto = "0.1"
tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp" }
postgres = "0.13"
r2d2 = "0.7"
r2d2_postgres = "0.11"
rustc-serialize = "0.3"
rand = "0.3"
